portfolio/public/output.css
/* ... */
.bg-dark-grey{
  --tw-bg-opacity: 1;
  background-color: rgb(117 117 117 / var(--tw-bg-opacity));
}

.bg-deep-blue{
  --tw-bg-opacity: 1;
  background-color: rgb(1 0 38 / var(--tw-bg-opacity));
}

.bg-grey{
  background-color: ededed;
}

.bg-red{
  --tw-bg-opacity: 1;
  background-color: rgb(220 68 146 / var(--tw-bg-opacity));
}

.bg-yellow{
  --tw-bg-opacity: 1;
  background-color: rgb(253 204 73 / var(--tw-bg-opacity));
}

.bg-gradient-rainblue{
  background-image: linear-gradient(90deg, #24CBFF 14.53%, #FC59FF 69.36%, #FFBD0C 117.73%);
}

.object-scale-down{
  object-fit: scale-down;
}

.p-10{
  padding: 2.5rem;
}

.p-12{
  padding: 3rem;
}

.p-16{
  padding: 4rem;
}

.p-2{
  padding: 0.5rem;
}

.px-10{
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.px-7{
  padding-left: 1.75rem;
  padding-right: 1.75rem;
}

.py-0{
  padding-top: 0px;
  padding-bottom: 0px;
}

.py-0\.5{
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
}

.py-10{
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.py-3{
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.py-6{
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.pb-24{
  padding-bottom: 6rem;
}

.pb-48{
  padding-bottom: 12rem;
}

.pr-0{
  padding-right: 0px;
}

.pr-0\.5{
  padding-right: 0.125rem;
}

.pt-10{
  padding-top: 2.5rem;
}

.pt-48{
  padding-top: 12rem;
}

.text-center{
  text-align: center;
}

.font-opensans{
  font-family: Open Sans, sans-serif;
}

.font-playfair{
  font-family: Playfair Display, serif;
}

.text-2xl{
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-3xl{
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-4xl{
  font-size: 2.25rem;
  line-height: 2.5rem;
}

.text-5xl{
  font-size: 3rem;
  line-height: 1;
}

.text-6xl{
  font-size: 3.75rem;
  line-height: 1;
}

.text-sm{
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.font-bold{
  font-weight: 700;
}

.font-semibold{
  font-weight: 600;
}

.text-deep-blue{
  --tw-text-opacity: 1;
  color: rgb(1 0 38 / var(--tw-text-opacity));
}

.text-red{
  --tw-text-opacity: 1;
  color: rgb(220 68 146 / var(--tw-text-opacity));
}

.text-yellow{
  --tw-text-opacity: 1;
  color: rgb(253 204 73 / var(--tw-text-opacity));
}

.underline{
  text-decoration-line: underline;
}

.opacity-0{
  opacity: 0;
}

.transition{
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.duration-500{
  transition-duration: 500ms;
}

/* @import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities"; */

html,
body,
#root,
.app {
  height: 100%;
  background-color: #010026;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.before\:absolute::before{
  content: var(--tw-content);
  position: absolute;
}

.before\:-left-10::before{
  content: var(--tw-content);
  left: -2.5rem;
}

.before\:-left-20::before{
  content: var(--tw-content);
  left: -5rem;
}

.before\:-left-\[25px\]::before{
  content: var(--tw-content);
  left: -25px;
}

.before\:-top-10::before{
  content: var(--tw-content);
  top: -2.5rem;
}

.before\:-top-20::before{
  content: var(--tw-content);
  top: -5rem;
}

.before\:-top-\[70px\]::before{
  content: var(--tw-content);
  top: -70px;
}

.before\:left-\[-50\%\]::before{
  content: var(--tw-content);
  left: -50%;
}

.before\:top-\[-50\%\]::before{
  content: var(--tw-content);
  top: -50%;
}

.before\:z-\[-1\]::before{
  content: var(--tw-content);
  z-index: -1;
}

.before\:h-6::before{
  content: var(--tw-content);
  height: 1.5rem;
}

.before\:h-full::before{
  content: var(--tw-content);
  height: 100%;
}

.before\:w-6::before{
  content: var(--tw-content);
  width: 1.5rem;
}

.before\:w-full::before{
  content: var(--tw-content);
  width: 100%;
}

.before\:max-w-\[400px\]::before{
  content: var(--tw-content);
  max-width: 400px;
}

.before\:rounded-full::before{
  content: var(--tw-content);
  border-radius: 9999px;
}

.before\:rounded-t-\[400px\]::before{
  content: var(--tw-content);
  border-top-left-radius: 400px;
  border-top-right-radius: 400px;
}

.before\:border-2::before{
  content: var(--tw-content);
  border-width: 2px;
}

.before\:border-blue::before{
  content: var(--tw-content);
  --tw-border-opacity: 1;
  border-color: rgb(44 188 233 / var(--tw-border-opacity));
}

.before\:border-yellow::before{
  content: var(--tw-content);
  --tw-border-opacity: 1;
  border-color: rgb(253 204 73 / var(--tw-border-opacity));
}

.hover\:bg-blue:hover{
  --tw-bg-opacity: 1;
  background-color: rgb(44 188 233 / var(--tw-bg-opacity));
}

.hover\:text-red:hover{
  --tw-text-opacity: 1;
  color: rgb(220 68 146 / var(--tw-text-opacity));
}

.hover\:text-white:hover{
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.hover\:text-yellow:hover{
  --tw-text-opacity: 1;
  color: rgb(253 204 73 / var(--tw-text-opacity));
}

.hover\:opacity-50:hover{
  opacity: 0.5;
}

.hover\:opacity-90:hover{
  opacity: 0.9;
}

.hover\:saturate-200:hover{
  --tw-saturate: saturate(2);
  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}
/* ... */

